--- a/Journal/Journal/StoryBoards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/StoryBoards/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,34 +18,34 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" id="Z9n-bl-Ci0" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="94.5"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="85.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Z9n-bl-Ci0" id="4m0-wM-UNu">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="94.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="85.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Lkg-zK-VMt">
-                                            <rect key="frame" x="20" y="10" width="351" height="45.5"/>
+                                            <rect key="frame" x="20" y="20" width="374" height="45.5"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="267" translatesAutoresizingMaskIntoConstraints="NO" id="Qao-CT-NuH">
-                                                    <rect key="frame" x="0.0" y="0.0" width="351" height="20.5"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Qao-CT-NuH">
+                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4en-YE-ijw">
-                                                            <rect key="frame" x="0.0" y="0.0" width="42" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4en-YE-ijw">
+                                                            <rect key="frame" x="0.0" y="0.0" width="330.5" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CtQ-vC-u2a">
-                                                            <rect key="frame" x="309" y="0.0" width="42" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <rect key="frame" x="338.5" y="0.0" width="35.5" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l5q-jg-wxt">
-                                                    <rect key="frame" x="0.0" y="24.5" width="351" height="21"/>
+                                                    <rect key="frame" x="0.0" y="24.5" width="374" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -53,10 +54,10 @@
                                         </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="Lkg-zK-VMt" secondAttribute="bottom" constant="39" id="2ea-eR-Nfb"/>
-                                        <constraint firstAttribute="trailing" secondItem="Lkg-zK-VMt" secondAttribute="trailing" constant="43" id="Fv7-aq-PDw"/>
-                                        <constraint firstItem="Lkg-zK-VMt" firstAttribute="leading" secondItem="4m0-wM-UNu" secondAttribute="leading" constant="20" id="OuH-Bh-bcy"/>
-                                        <constraint firstItem="Lkg-zK-VMt" firstAttribute="top" secondItem="4m0-wM-UNu" secondAttribute="top" constant="10" id="tHc-x4-eKz"/>
+                                        <constraint firstAttribute="bottom" secondItem="Lkg-zK-VMt" secondAttribute="bottom" constant="20" symbolic="YES" id="2ea-eR-Nfb"/>
+                                        <constraint firstAttribute="trailing" secondItem="Lkg-zK-VMt" secondAttribute="trailing" constant="20" symbolic="YES" id="Fv7-aq-PDw"/>
+                                        <constraint firstItem="Lkg-zK-VMt" firstAttribute="leading" secondItem="4m0-wM-UNu" secondAttribute="leading" constant="20" symbolic="YES" id="OuH-Bh-bcy"/>
+                                        <constraint firstItem="Lkg-zK-VMt" firstAttribute="top" secondItem="4m0-wM-UNu" secondAttribute="top" constant="20" symbolic="YES" id="tHc-x4-eKz"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
