--- a/Journal/Journal/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Journal/Journal/View/Storyboard/Base.lproj/Main.storyboard
@@ -120,6 +120,11 @@
                                         <constraint firstItem="AoE-Ge-MSj" firstAttribute="leading" secondItem="QpA-jI-Nb9" secondAttribute="leading" constant="20" id="Zl1-Ju-Eti"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="entryBodyTextView" destination="drk-Yu-j5K" id="qJt-rz-pJZ"/>
+                                    <outlet property="entryTimestampLabel" destination="im3-EU-LCe" id="iX4-xR-uky"/>
+                                    <outlet property="entryTitleLabel" destination="LR8-Fy-iM1" id="iDo-28-l8N"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
